// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupSocialIntro renders correctly when social backup is complete 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 20,
        "paddingHorizontal": 20,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 22,
              "paddingBottom": 20,
              "textAlign": "center",
            }
          }
        >
          socialBackup.yourSafeguards
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 16,
              "lineHeight": 24,
              "marginBottom": 20,
            }
          }
        >
          socialBackupIntro.body
        </Text>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#EEEEEE",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 10,
                "padding": 14,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#EEEEEE",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 10,
                "padding": 14,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</SafeAreaView>
`;

exports[`BackupSocialIntro renders correctly when social backup is not complete 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 20,
        "paddingHorizontal": 20,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 22,
              "paddingBottom": 20,
              "textAlign": "center",
            }
          }
        >
          setUpSocialBackup
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 16,
              "lineHeight": 24,
              "marginBottom": 20,
            }
          }
        >
          socialBackup.body
        </Text>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#EEEEEE",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 10,
                "padding": 14,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#EEEEEE",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 10,
                "padding": 14,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingVertical": 20,
          }
        }
      >
        <AndroidSwitch
          accessibilityRole="switch"
          enabled={true}
          on={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          thumbTintColor="#FFFFFF"
          trackColorForFalse="#D1D5D8"
          trackColorForTrue="#42D689"
          trackTintColor="#D1D5D8"
        />
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 16,
              "lineHeight": 24,
              "paddingLeft": 8,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          socialBackup.confirmation
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "flexDirection": "row",
        },
        null,
        null,
        undefined,
        Object {
          "backgroundColor": "#A3EBC6",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={false}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#A3EBC6",
          },
          Object {
            "height": 50,
          },
          Object {
            "borderWidth": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-SemiBold",
                "fontSize": 16,
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "paddingLeft": 5,
                "paddingRight": 5,
              },
            ]
          }
        >
          global:done
        </Text>
      </View>
    </View>
  </View>
</SafeAreaView>
`;
